# rsomics-tsv-select

./: Cargo.toml
benches/: bench.rs
src/: cli.rs  lib.rs  main.rs
tests/: compat.rs  smoke.rs
tests/golden/: data.tsv
