[package]
name = "rsomics-tsv-select"
version = "0.1.0"
description = "Select, reorder, or rename columns from TSV files — cut + awk for bioinformatics pipelines"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-world"
authors = ["Zane Leong <efd@live.com>"]

[[bin]]
name = "rsomics-tsv-select"
path = "src/main.rs"

[lib]
name = "rsomics_tsv_select"
path = "src/lib.rs"

doctest = false
[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
clap = { version = "4", features = ["derive"] }

